# CMPT-295-Introduction-to-Computer-Systems

./: README.md
Assignment-1/: .gitignore  .travis.yml.bak  README.md
Assignment-1/Arraylist/: arraylist.c  main.c
Assignment-1/word-count/: dedup.c  dictionary.c  duplicate.c  linecount.c  str_cmp.c  table_string.c  tokenize.c  unit_test_strcmp.c  vector_string.c
Assignment-2/: README.md  driver.py  part1.c  part2.c  utils.c
Assignment-3/: LOG.md  README.md  assignment-3-gukaizeg.log.success  assignment-3-gukaizeg_Grade.json  assignment-3-gukaizeg_Grade_GEMV.json  assignment-3-gukaizeg_Grade_SPMV.json  dense2sparse.py  dot.s  driver_gemv.py  driver_spmv.py  gemv.py  gemv.s  mergejson.py  part2_tester.py  read_matrix.s  run.sh  sdot.s  utils.s
Assignment-3/ref/: test_read_coo.out
Assignment-3/scripts/: localci.sh  pass.sh
Assignment-3/test_files/: main_gemv.s  test_dot.s  test_gemv.s  test_input.txt  test_read_matrix.s  test_sdot.s
Assignment-4/: .gitignore  .travis.yml.bak  LOG.md  Makefile  README.md  cache-test-skel.c  caches.enc  decrypt.py  driver.py  run.sh
Assignment-4/model/: 2level  2level-ref  (+13 more)
Assignment-5/: .gitignore  Makefile  README.md  driver.py  main.cpp
Assignment-6/: .gitignore  Example_Error_Pipeline.csv  Example_Pipeline.csv  Example_Pipeline.enc  Factorial_Pipeline.csv  Factorial_Pipeline.enc  Fibonacci_Pipeline.csv  Fibonacci_Pipeline.enc  JTable.csv  JTable.enc  JTable.s  driver.py  example.s  factorial.s  fibonacci.s  run.sh
Assignment-6/SIMD/: CMakeLists.txt  functions.cpp  intrin.cpp  intrin.h  logger.cpp  logger.h  main.cpp
(+59 files in other folders)
